# getnotes-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_EN.md  pyproject.toml
.agent/workflows/: release.md
.github/workflows/: publish.yml
src/getnotes_cli/: __init__.py  auth.py  cache.py  cdp.py  cli.py  config.py  creator.py  downloader.py  exporter.py  markdown.py  notebook.py  notebook_downloader.py  searcher.py  settings.py
src/getnotes_cli/mcp/: server.py
src/getnotes_cli/mcp/tools/: _utils.py  notebooks.py  notes.py
tests/: test_auth.py  test_cache.py  test_markdown.py  test_searcher.py  test_settings.py
