[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getnotes-cli"
version = "0.1.0"
description = "得到笔记 (GetNotes) CLI 下载工具 — 自动登录、批量下载、Markdown 导出"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Han Zhang" }
]
keywords = ["getnotes", "得到笔记", "cli", "download", "markdown"]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "websocket-client>=1.6.0",
]

[project.scripts]
getnotes = "getnotes_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/getnotes_cli"]
