[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getnotes-cli"
version = "0.2.1"
description = "Get 笔记 CLI 下载工具 — 自动登录、批量下载、Markdown 导出、知识库管理、MCP 集成"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    { name = "Han Zhang" }
]
keywords = ["getnotes", "Get 笔记", "cli", "download", "markdown"]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "websocket-client>=1.6.0",
    "requests-toolbelt>=1.0.0",
    "requests>=2.0.0",
    "fastmcp>=0.1.0",
    "reportlab>=3.6.0",
]

[project.scripts]
getnotes = "getnotes_cli.cli:main"
getnotes-mcp = "getnotes_cli.mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/getnotes_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
